--- a/src/components/_styles/constants.scss
+++ b/src/components/_styles/constants.scss
@@ -1,27 +1,78 @@
 // Grid
+$g: 4px;
+$g__2: 2 * $g;
+$g__3: 3 * $g;
+$g__4: 4 * $g;
+$g__5: 5 * $g;
+$g__6: 6 * $g;
+$g__7: 7 * $g;
+$g__8: 8 * $g;
+$g__9: 9 * $g;
+$g__10: 10 * $g;
+$g__20: 20 * $g;
+$g__30: 30 * $g;
+$g__40: 40 * $g;
+$g__50: 50 * $g;
+
 $g__column: 60px;
 $g__gutter: 20px;
 $g__margin: 10px;
+
+@function g($times: 1) {
+  @return $times * $g;
+}
 
 @function g__width($columns) {
   @return $g__column * $columns + $g__gutter * ($columns - 1);
 }
 
-// Fonts
-$font__family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-$font__size_m: 14px;
-$font__line-height: 1.5em;
-
-@mixin font__style_p {
-  font-size: 16px;
-  font-weight: 100;
-}
-
 // Palette
-$pl__primary: #6F948A;
-$pl__secondary: #877863;
-$pl__darkest: #40434A;
-$pl__lightest: #F2F2E9;
+$pl__primary: #159AF3;
+$pl__secondary: #3EDE02;
+
+$pl__grey_d4: #272727;
+$pl__grey_d3: #4A4A4A;
+$pl__grey: #E3E3E3;
 
 $pl__black: #000;
 $pl__white: #fff;
+
+// Fonts
+$font__lh: 1.2em;
+
+@mixin font__style_body {
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: $font__lh;
+  color: $pl__grey_d4;
+}
+
+@mixin font__style_h3 {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: $font__lh;
+}
+
+@mixin font__style_h4 {
+  font-size: 18px;
+  line-height: $font__lh;
+}
+
+@mixin font__style_note {
+  font-size: 14px;
+  font-weight: 100;
+  line-height: $font__lh;
+}
+
+@mixin font__style_small-note {
+  font-size: 12px;
+  line-height: $font__lh;
+}
+
+// h1 64
+// h2 48
+// h3 
+// h4 20
+// h5 18
+// h6 16 bold
