--- a/src/components/_styles/constants.scss
+++ b/src/components/_styles/constants.scss
@@ -32,7 +32,9 @@ $pl__secondary: #3EDE02;
 
 $pl__grey_d4: #272727;
 $pl__grey_d3: #4A4A4A;
+$pl__grey_d: #B0B0B0;
 $pl__grey: #E3E3E3;
+$pl__grey_l: #F6F6F6;
 
 $pl__black: #000;
 $pl__white: #fff;
@@ -72,7 +74,7 @@ $font__lh: 1.2em;
 
 // h1 64
 // h2 48
-// h3 
+// h3 22
 // h4 20
 // h5 18
 // h6 16 bold
