--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,7 @@
 .root {
   display: flex;
   justify-content: space-between;
-  padding: 0px $g__margin $g__5 $g__margin;
+  padding: 0px $g__margin g(5) $g__margin;
   border-bottom: 1px solid $pl__grey;
 }
 
@@ -29,13 +29,13 @@
 
 .next-payment {
   display: block;
-  margin-top: $g__2;
+  margin-top: g(2);
   color: $pl__secondary;
   text-decoration: underline;
 }
 
 .help {
-  margin-top: $g__3;
+  margin-top: g(3);
   display: flex;
 }
 
@@ -46,7 +46,7 @@
   border-radius: 50%;
   background-color: #F2CD30;
   color: $pl__white;
-  margin-right: $g;
+  margin-right: g();
   //
   text-align: center;
   font-size: 12px;
@@ -74,12 +74,12 @@
   color: $pl__white;
   background-image: linear-gradient(-270deg, #FF0057 0%, #F5134E 100%);
   box-shadow: 0px 0px 6px 0px rgba(120, 120, 120, 0.50);
-  border-radius: $g__3;
+  border-radius: g(3);
 }
 
 .exit {
   @include font__style_small-note;
-  margin-top: $g__3;
+  margin-top: g(3);
   text-align: center;
 }
 
