--- a/src/components/_styles/common.scss
+++ b/src/components/_styles/common.scss
@@ -7,6 +7,10 @@
   padding: 0px;
 }
 
+html, body, :global(#app) {
+  height: 100%;
+}
+
 body {
   @include font__style_body;
   background-color: $pl__white;
