--- a/src/components/_utils/Layout/layout.scss
+++ b/src/components/_utils/Layout/layout.scss
@@ -2,5 +2,8 @@
 
 .root {
   width: g__width(12) + 2 * $g__margin;
-  margin: 48px auto 0px auto;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0px auto 0px auto;
+  padding-top: g(12);
 }
