Spitfire (buggy edition)

--- a/src/components/_pages/Spitfire/styles.scss
+++ b/src/components/_pages/Spitfire/styles.scss
@@ -34,7 +34,7 @@
 }
 
 .input-textarea {
-  font-family: monospace;
+  font-family: "Bitstream Vera Sans Mono", "Consolas", "Courier", monospace;
   font-size: 14px;
   line-height: $font__lh;
   height: 100%;
