--- a/src/components/Textarea/styles.scss
+++ b/src/components/Textarea/styles.scss
@@ -2,10 +2,11 @@
 
 .textarea {
   width: 100%;
-  height: g(22);
+  height: g(26);
   border-radius: g(2);
   border: 1px solid $pl__grey;
   padding: g(3);
   margin-top: g(2);
+  box-sizing: border-box;
   resize: none;
 }
