--- a/src/components/CardSelector/styles.scss
+++ b/src/components/CardSelector/styles.scss
@@ -7,7 +7,7 @@
 .card-status {
   width: g(2);
   height: g(2);
-  margin: 0px g(2) 0px g();
+  margin: 0 g(2) 0 g();
   border-radius: 50%;
   background-color: $pl__secondary;
 }
