--- a/src/components/Funds/styles.scss
+++ b/src/components/Funds/styles.scss
@@ -34,7 +34,8 @@
   margin-top: g(4);
 }
 
-.funds-whole, .currency {
+.funds-whole,
+.currency {
   font-size: 64px;
   font-weight: 500;
   line-height: $font__lh;
