--- a/src/components/_utils/Layout/styles.scss
+++ b/src/components/_utils/Layout/styles.scss
@@ -4,6 +4,6 @@
   width: g__width(12) + 2 * $g__margin;
   height: 100%;
   box-sizing: border-box;
-  margin: 0px auto 0px auto;
+  margin: 0 auto;
   padding-top: g(12);
 }
