--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,7 +3,7 @@
 .root {
   display: flex;
   justify-content: space-between;
-  padding: 0px $g__margin g(5) $g__margin;
+  padding: 0 $g__margin g(5) $g__margin;
   border-bottom: 1px solid $pl__grey;
 }
 
@@ -19,7 +19,7 @@
   box-sizing: border-box;
   border-radius: 50%;
   border: 1px solid $pl__grey;
-  background-image: url('./me.jpg');
+  background-image: url("./me.jpg");
   background-size: 100%;
 }
 
@@ -47,7 +47,6 @@
   background-color: #F2CD30;
   color: $pl__white;
   margin-right: g();
-  //
   text-align: center;
   font-size: 12px;
   font-weight: 500;
@@ -66,14 +65,14 @@
   user-select: none;
   height: 70px;
   width: 72px;
-  margin: 0px auto;
+  margin: 0 auto;
   font-size: 46px;
   font-weight: 500;
   line-height: 70px;
   text-align: center;
   color: $pl__white;
   background-image: linear-gradient(-270deg, #FF0057 0%, #F5134E 100%);
-  box-shadow: 0px 0px 6px 0px rgba(120, 120, 120, 0.50);
+  box-shadow: 0 0 6px 0 rgba(120, 120, 120, 0.5);
   border-radius: g(3);
 }
 
